Finished Author Routes

--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,3 +1,3 @@
 <!-- Underscore convention: not a file sent from server-->
 <label>Name</label>
-<input type="text" name="name"><%= author.name %></input>
+<input type="text" name="name" value="<%= author.name %>"></input>
