--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,3 +1,7 @@
 <!-- Underscore convention: not a file sent from server-->
-<label>Name</label>
-<input type="text" name="name" value="<%= author.name %>"></input>
+<div class="form-row">
+    <div class="form-item">
+        <label>Name</label>
+        <input type="text" name="name" value="<%= author.name %>"></input>
+    </div>
+</div>
