--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,8 @@
 @import 'shared/header.css';
 @import 'shared/buttons.css';
 @import 'shared/form.css';
+@import 'shared/author.css';
+@import 'shared/book.css';
 
 :root {
     font-family: 'Tw Cen MT Condensed';
@@ -28,4 +30,8 @@ body {
 
 .inner-container {
     margin: 0 2rem;
+}
+
+.error-message {
+    color: hsl(var(--color-danger-hue), 100%, 50%);
 }
